--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    body {
+        @apply dark:bg-slate-950 dark:text-neutral-50;
+    }
+}
+
 @layer utilities {
     .glow {
         @apply relative p-1
